workaround for system-rules junit plugin not supporting Java 18+