@@ -1838,6 +1838,8 @@
 
                     <!-- required for certain EqualsVerifier tests (not required in production) -->
                     --add-opens=java.base/java.util=ALL-UNNAMED
+                    <!-- required for system-rules https://github.com/stefanbirkner/system-rules/issues/85 -->
+                    -Djava.security.manager=allow
                 </jdk.strong.encapsulation.argLine>
             </properties>
             <build>
